Fix Edge and Chrome scrollbar style

--- a/src/content/content.css
+++ b/src/content/content.css
@@ -59,8 +59,8 @@
 
 #ts_dialog {
     border: 1px solid gray;
-    scrollbar-color: rgb(40, 40, 40) rgb(27, 27, 27);
-    scrollbar-width: thin;
+    /* scrollbar-color: rgb(40, 40, 40) rgb(27, 27, 27); */
+    /* scrollbar-width: thin; */
     position: fixed;
     display: block;
     z-index: 2147483646;
@@ -68,7 +68,10 @@
     height: 220px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 1em 1em 0em 1em;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .ts_dialogCM {
@@ -94,7 +97,7 @@
 }
 
 .ts_infoWrapper {
-    scrollbar-width: thin;
+    /* scrollbar-width: thin; */
     width: 100%;
     height: 91%;
     background-color: #141414;
@@ -102,7 +105,19 @@
     display: inline-block;
     overflow: auto;
     overscroll-behavior: contain;
-    border-radius: 0em 0em 1em 1em;
+    border-radius: 0em 0em 0em 1em;
+}
+
+.ts_infoWrapper::-webkit-scrollbar {
+    width: 1em;
+}
+
+.ts_infoWrapper::-webkit-scrollbar-thumb {
+    background-color: #282828;
+}
+
+.ts_infoWrapper::-webkit-scrollbar-track {
+    background-color: #1b1b1b;
 }
 
 .ts_closeButton {
@@ -123,6 +138,8 @@
     text-align: left !important;
     margin: 0;
     padding: 0;
+    padding-right: 1em;
+    line-height: normal !important;
 }
 
 .ts_similarWord {
